; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser.c_tl_expression_combinator_hash_compute_hash.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser.c_tl_expression_combinator_hash_compute_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_hashmap = type { i32 }
%struct.tl_expression = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tl_hashmap*, i8*, i32*, i32*)* @tl_expression_combinator_hash_compute_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tl_expression_combinator_hash_compute_hash(%struct.tl_hashmap* %0, i8* %1, i32* %2, i32* %3) #0 {
  %5 = alloca %struct.tl_hashmap*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.tl_expression*, align 8
  store %struct.tl_hashmap* %0, %struct.tl_hashmap** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to %struct.tl_expression*
  store %struct.tl_expression* %11, %struct.tl_expression** %9, align 8
  %12 = load %struct.tl_hashmap*, %struct.tl_hashmap** %5, align 8
  %13 = load %struct.tl_expression*, %struct.tl_expression** %9, align 8
  %14 = getelementptr inbounds %struct.tl_expression, %struct.tl_expression* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32*, i32** %7, align 8
  %19 = load i32*, i32** %8, align 8
  %20 = call i32 @tl_str_compute_hash(%struct.tl_hashmap* %12, i32 %17, i32* %18, i32* %19)
  ret void
}

declare dso_local i32 @tl_str_compute_hash(%struct.tl_hashmap*, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
